--- a/serverless.yml
+++ b/serverless.yml
@@ -25,10 +25,51 @@ provider:
   runtime: nodejs12.x
   stage: dev
   region: us-east-1
-    
+
 # you can overwrite defaults here
 
 # you can add statements to the Lambda function's IAM Role here
+Description: This stack creates an IAM role that can be used by Serverless Framework Pro for use in deployments.
+Resources:
+  SFProRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              AWS: arn:aws:iam::802587217904:root
+            Action:
+              - sts:AssumeRole
+            Condition:
+              StringEquals:
+                sts:ExternalId: "ServerlessEnterprise-J9V12zhcN0QFTVqq1c"
+      Path: /
+      RoleName: SFProRole-default
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AdministratorAccess
+  ReporterFunction:
+    Type: Custom::SFProReporter
+    Properties:
+      ServiceToken: "arn:aws:lambda:us-east-1:802587217904:function:event-gateway-dashboard-backend-prod-saveIamRoleToProfile"
+      OrgId: J9V12zhcN0QFTVqq1c
+      RoleArn: arn:aws:iam::579258516853:role/SFProRole-default
+      ProfileName: tweek_test
+Outputs:
+  SFProRoleArn:
+    Description: "ARN for the IAM Role used by SF Pro"
+    Value: arn:aws:iam::579258516853:role/SFProRole-default
+Parameters:
+  OrgId:
+    Description: SF Pro Org Id
+    Type: String
+  ProfileName:
+    Description: SF Pro Profile Name
+    Type: String
+  RoleName:
+    Description: SF Pro Role Name
+    Type: String
 # iamRoleStatements:
 #   - Effect: "Allow"
 #     Action:
